--- a/CSS/style.css
+++ b/CSS/style.css
@@ -120,7 +120,7 @@ body{
 .footer{
     position: fixed;
     bottom: 0;
-    font-size: 0.3rem;
+    font-size: 17px;
     display: flex;
     flex-direction: column;
     align-items: center;
